--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "supabase": "^2.24.3",
     "svg-pan-zoom": "^3.6.2"
   },
   "devDependencies": {
